--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "leaflet.zoomhome": "^1.0.0",
     "mapbox-gl-esri-sources": "^0.0.7",
     "maplibre-gl": "^5.5.0",
+    "plotly.js": "^3.0.3",
     "uuid": "^11.1.0",
     "vue": "^3.4.15",
     "vuetify": "^3.4.11",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/esri-leaflet": "^3.0.3",
     "@types/leaflet": "^1.9.11",
+    "@types/plotly.js": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@typescript-eslint/typescript-estree": "^6.19.0",
