--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@types/plotly.js-dist-min": "^2.3.4",
     "@vuepic/vue-datepicker": "^9.0.3",
     "@vueuse/components": "^12.0.0",
     "@vueuse/core": "^12.0.0",
     "@wwtelescope/engine-pinia": "^0.9.0",
+    "assert": "^2.1.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
     "esri-leaflet": "^3.0.17",
@@ -16,7 +18,8 @@
     "leaflet.zoomhome": "^1.0.0",
     "mapbox-gl-esri-sources": "^0.0.7",
     "maplibre-gl": "^5.5.0",
-    "plotly.js": "^3.0.3",
+    "plotly.js-dist-min": "^3.0.3",
+    "stream": "^0.0.3",
     "uuid": "^11.1.0",
     "vue": "^3.4.15",
     "vuetify": "^3.4.11",
@@ -25,7 +28,6 @@
   "devDependencies": {
     "@types/esri-leaflet": "^3.0.3",
     "@types/leaflet": "^1.9.11",
-    "@types/plotly.js": "^3.0.2",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@typescript-eslint/typescript-estree": "^6.19.0",
