--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "assert": "^2.1.0",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "golden-layout": "^2.6.0",
     "mapbox-gl-esri-sources": "^0.0.7",
     "maplibre-gl": "^5.5.0",
     "plotly.js-dist-min": "^3.0.3",
