--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "golden-layout": "^2.6.0",
     "mapbox-gl-esri-sources": "^0.0.7",
     "maplibre-gl": "^5.5.0",
+    "pinia": "^3.0.3",
     "plotly.js-dist-min": "^3.0.3",
     "stream": "^0.0.3",
     "uuid": "^11.1.0",
