--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "uuid": "^11.1.0",
     "vue": "^3.4.15",
     "vuetify": "^3.4.11",
-    "webpack-plugin-vuetify": "^2.0.0"
+    "webpack-plugin-vuetify": "^2.0.0",
+    "zipson": "^0.2.12"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.19.0",
