--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@photostructure/tz-lookup": "^11.2.1",
     "@types/plotly.js-dist-min": "^2.3.4",
     "@vuepic/vue-datepicker": "^9.0.3",
     "@vueuse/components": "^12.0.0",
